hphp/hack/test/typecheck/strict_switch/generic_enum_class.php.new_exhaustivity.exp
ERROR: File "generic_enum_class.php", line 30, characters 3-147:
This `switch` statement is nonexhaustive. At least the following cases are missing: `DerivedEnumClass::LabelIntClass` (Typing[4019])
  File "generic_enum_class.php", line 30, characters 11-12:
  The scrutinee has type `HH\MemberOf<DerivedEnumClass, GenericClass<T>>`.
